--- a/phone.html
+++ b/phone.html
@@ -4,30 +4,30 @@
 	<title></title>
 	<style type="text/css">
 		div{
-			width: 300px;
-			height: 100px;
+			width: 500px;
+			height: 300px;
 			border: 3px solid black;
-			font-size: 20px;
+			font-size: 50px;
 			text-align: center;
-			line-height: 100px;
+			line-height: 300px;
 			position: absolute;
 			left: 50%;
 			top: 50%;
-			margin-left: -150px;
-			margin-top: -50px
+			margin-left: -250px;
+			margin-top: -150px
 		}
 	</style>
 	<script type="text/javascript">
 		document.addEventListener('DOMContentLoaded',function () {
 			var oDiv = document.getElementsByTagName('div')[0];
-			oDiv.addEventListener('touchstart',function () {
-				oDiv.innerHTML = '我现在不能答复你'
+			oDiv.addEventListener('touchstart',function (ev) {
+				oDiv.innerHTML = '我现在不能答复你';
+				ev.preventDefault();
 			},false);
 			oDiv.addEventListener('touchend',function () {
 				oDiv.innerHTML = '';
-				oDiv.style.border = 'white';
+				oDiv.style.border = 'none';
 				oDiv.style.background = 'url(timg.jpg) no-repeat';
-				oDiv.style.height = '300px';
 				// var oImg = new Image();
 				// oImg.src = 'timg.jpg';
 				// document.body.appendChild(oImg)
