--- a/phone.html
+++ b/phone.html
@@ -27,7 +27,7 @@
 			oDiv.addEventListener('touchend',function () {
 				oDiv.innerHTML = '';
 				oDiv.style.border = 'none';
-				oDiv.style.background = 'url(timg.jpg) no-repeat';
+				oDiv.style.background = 'url(timg.jpg) no-repeat 120px';
 				// var oImg = new Image();
 				// oImg.src = 'timg.jpg';
 				// document.body.appendChild(oImg)
